--- a/craftersmine.Aesir/craftersmine.Aesir.csproj
+++ b/craftersmine.Aesir/craftersmine.Aesir.csproj
@@ -12,4 +12,19 @@
     <PackageReference Include="craftersmine.Asar.Net" Version="1.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Res\FileIcons.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>FileIcons.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Res\FileIcons.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>FileIcons.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
