--- a/craftersmine.Aesir/craftersmine.Aesir.csproj
+++ b/craftersmine.Aesir/craftersmine.Aesir.csproj
@@ -18,12 +18,21 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>FileIcons.resx</DependentUpon>
     </Compile>
+    <Compile Update="Res\Toolbar.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Toolbar.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Update="Res\FileIcons.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>FileIcons.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Res\Toolbar.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Toolbar.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
 
