--- a/craftersmine.Aesir.CLI/craftersmine.Aesir.CLI.csproj
+++ b/craftersmine.Aesir.CLI/craftersmine.Aesir.CLI.csproj
@@ -9,7 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
-    <PackageReference Include="craftersmine.Asar.Net" Version="1.0.2-alpha" />
+    <PackageReference Include="craftersmine.Asar.Net" Version="1.0.2" />
   </ItemGroup>
 
 </Project>
